serde-shape/tests/snapshots/derive__snapshots_conversion_based_opaque_shape.snap
---
source: serde-shape/tests/derive.rs
expression: "FromString::shape()"
---
Shape {
    root: Definition(
        ShapeId(
            0,
        ),
    ),
    definitions: [
        DefinitionShape {
            id: ShapeId(
                0,
            ),
            type_name: TypeName {
                rust_name: "derive::FromString",
                serde_name: "FromString",
            },
            kind: Opaque(
                OpaqueShape {
                    type_name: "derive::FromString",
                    reason: FromType,
                    detail: Some(
                        "String",
                    ),
                },
            ),
        },
    ],
}
