serde-shape/tests/snapshots/derive__snapshots_phantom_data_generic_field_without_shape_bound.snap
---
source: serde-shape/tests/derive.rs
expression: "Marker::<NotShape>::shape()"
---
Shape {
    root: Definition(
        ShapeId(
            0,
        ),
    ),
    definitions: [
        DefinitionShape {
            id: ShapeId(
                0,
            ),
            type_name: TypeName {
                rust_name: "derive::Marker<derive::NotShape>",
                serde_name: "Marker",
                serialize_name: "Marker",
            },
            kind: Struct(
                StructShape {
                    style: Struct,
                    fields: [
                        FieldShape {
                            member: Named(
                                "marker",
                            ),
                            serialize_name: "marker",
                            deserialize_name: "marker",
                            deserialize_aliases: [
                                "marker",
                            ],
                            shape: Some(
                                Unit,
                            ),
                            default: None,
                            flatten: false,
                            skip_serializing: false,
                            skip_serializing_if: None,
                            skip_deserializing: false,
                            custom_serializer: false,
                            custom_deserializer: false,
                            transparent: false,
                        },
                    ],
                    attributes: ContainerAttributes {
                        tagging: External,
                        deny_unknown_fields: false,
                        default: None,
                        has_flatten: false,
                        transparent: false,
                        expecting: None,
                        non_exhaustive: false,
                    },
                },
            ),
        },
    ],
}
