serde-shape/tests/snapshots/derive__snapshots_recursive_type_reusing_the_same_definition.snap
---
source: serde-shape/tests/derive.rs
expression: "Recursive::deserialize_shape()"
---
DeserializeShapeGraph {
    root: Definition(
        ShapeId(
            0,
        ),
    ),
    definitions: [
        DeserializeDefinitionShape {
            id: ShapeId(
                0,
            ),
            type_name: DeserializeTypeName {
                rust_name: "derive::Recursive",
                name: "Recursive",
            },
            kind: Struct(
                DeserializeStructShape {
                    style: Struct,
                    fields: [
                        DeserializeFieldShape {
                            member: Named(
                                "child",
                            ),
                            name: "child",
                            aliases: [
                                "child",
                            ],
                            value_shape: Some(
                                Option(
                                    Definition(
                                        ShapeId(
                                            0,
                                        ),
                                    ),
                                ),
                            ),
                            default: None,
                            flatten: false,
                            skip: false,
                            custom_deserializer: false,
                            transparent: false,
                        },
                    ],
                    attributes: DeserializeContainerAttributes {
                        tagging: External,
                        deny_unknown_fields: false,
                        default: None,
                        has_flatten: false,
                        transparent: false,
                        expecting: None,
                        non_exhaustive: false,
                    },
                },
            ),
        },
    ],
}
