serde-shape/tests/snapshots/derive__snapshots_skipped_generic_field_without_shape_bound.snap
---
source: serde-shape/tests/derive.rs
expression: "SkipsGeneric::<NotShape>::shape()"
---
Shape {
    root: Definition(
        ShapeId(
            0,
        ),
    ),
    definitions: [
        DefinitionShape {
            id: ShapeId(
                0,
            ),
            type_name: TypeName {
                rust_name: "derive::SkipsGeneric<derive::NotShape>",
                serde_name: "SkipsGeneric",
                serialize_name: "SkipsGeneric",
            },
            kind: Struct(
                StructShape {
                    style: Struct,
                    fields: [
                        FieldShape {
                            member: Named(
                                "value",
                            ),
                            serialize_name: "value",
                            deserialize_name: "value",
                            deserialize_aliases: [
                                "value",
                            ],
                            shape: None,
                            default: Default,
                            flatten: false,
                            skip_serializing: true,
                            skip_serializing_if: None,
                            skip_deserializing: true,
                            custom_serializer: false,
                            custom_deserializer: false,
                            transparent: false,
                        },
                    ],
                    attributes: ContainerAttributes {
                        tagging: External,
                        deny_unknown_fields: false,
                        default: None,
                        has_flatten: false,
                        transparent: false,
                        expecting: None,
                        non_exhaustive: false,
                    },
                },
            ),
        },
    ],
}
