serde-shape/tests/snapshots/derive__snapshots_struct_shape_from_container_and_field_attrs.snap
---
source: serde-shape/tests/derive.rs
expression: "Config::shape()"
---
Shape {
    root: Definition(
        ShapeId(
            0,
        ),
    ),
    definitions: [
        DefinitionShape {
            id: ShapeId(
                0,
            ),
            type_name: TypeName {
                rust_name: "derive::Config",
                serde_name: "Config",
                serialize_name: "Config",
            },
            kind: Struct(
                StructShape {
                    style: Struct,
                    fields: [
                        FieldShape {
                            member: Named(
                                "http_port",
                            ),
                            serialize_name: "http-port",
                            deserialize_name: "http-port",
                            deserialize_aliases: [
                                "http-port",
                            ],
                            shape: Some(
                                U16,
                            ),
                            default: None,
                            flatten: false,
                            skip_serializing: false,
                            skip_serializing_if: None,
                            skip_deserializing: false,
                            custom_serializer: false,
                            custom_deserializer: false,
                            transparent: false,
                        },
                        FieldShape {
                            member: Named(
                                "api_url",
                            ),
                            serialize_name: "api-url",
                            deserialize_name: "api-url",
                            deserialize_aliases: [
                                "api-url",
                                "endpoint",
                            ],
                            shape: Some(
                                Option(
                                    String,
                                ),
                            ),
                            default: None,
                            flatten: false,
                            skip_serializing: false,
                            skip_serializing_if: None,
                            skip_deserializing: false,
                            custom_serializer: false,
                            custom_deserializer: false,
                            transparent: false,
                        },
                        FieldShape {
                            member: Named(
                                "retries",
                            ),
                            serialize_name: "retries",
                            deserialize_name: "retries",
                            deserialize_aliases: [
                                "retries",
                            ],
                            shape: Some(
                                U8,
                            ),
                            default: Path(
                                "default_retries",
                            ),
                            flatten: false,
                            skip_serializing: false,
                            skip_serializing_if: None,
                            skip_deserializing: false,
                            custom_serializer: false,
                            custom_deserializer: false,
                            transparent: false,
                        },
                        FieldShape {
                            member: Named(
                                "storage",
                            ),
                            serialize_name: "storage",
                            deserialize_name: "storage",
                            deserialize_aliases: [
                                "storage",
                            ],
                            shape: Some(
                                Definition(
                                    ShapeId(
                                        1,
                                    ),
                                ),
                            ),
                            default: None,
                            flatten: true,
                            skip_serializing: false,
                            skip_serializing_if: None,
                            skip_deserializing: false,
                            custom_serializer: false,
                            custom_deserializer: false,
                            transparent: false,
                        },
                        FieldShape {
                            member: Named(
                                "skipped",
                            ),
                            serialize_name: "skipped",
                            deserialize_name: "skipped",
                            deserialize_aliases: [
                                "skipped",
                            ],
                            shape: None,
                            default: None,
                            flatten: false,
                            skip_serializing: true,
                            skip_serializing_if: None,
                            skip_deserializing: true,
                            custom_serializer: false,
                            custom_deserializer: false,
                            transparent: false,
                        },
                        FieldShape {
                            member: Named(
                                "secret",
                            ),
                            serialize_name: "secret",
                            deserialize_name: "secret",
                            deserialize_aliases: [
                                "secret",
                            ],
                            shape: None,
                            default: None,
                            flatten: false,
                            skip_serializing: false,
                            skip_serializing_if: None,
                            skip_deserializing: false,
                            custom_serializer: false,
                            custom_deserializer: true,
                            transparent: false,
                        },
                    ],
                    attributes: ContainerAttributes {
                        tagging: External,
                        deny_unknown_fields: true,
                        default: Default,
                        has_flatten: true,
                        transparent: false,
                        expecting: Some(
                            "config object",
                        ),
                        non_exhaustive: false,
                    },
                },
            ),
        },
        DefinitionShape {
            id: ShapeId(
                1,
            ),
            type_name: TypeName {
                rust_name: "derive::Storage",
                serde_name: "Storage",
                serialize_name: "Storage",
            },
            kind: Enum(
                EnumShape {
                    repr: Internal {
                        tag: "type",
                    },
                    variants: [
                        VariantShape {
                            rust_name: "S3",
                            serialize_name: "s3",
                            deserialize_name: "s3",
                            deserialize_aliases: [
                                "s3",
                                "s3-compatible",
                            ],
                            style: Struct,
                            fields: [
                                FieldShape {
                                    member: Named(
                                        "bucket_name",
                                    ),
                                    serialize_name: "bucket-name",
                                    deserialize_name: "bucket-name",
                                    deserialize_aliases: [
                                        "bucket-name",
                                    ],
                                    shape: Some(
                                        String,
                                    ),
                                    default: None,
                                    flatten: false,
                                    skip_serializing: false,
                                    skip_serializing_if: None,
                                    skip_deserializing: false,
                                    custom_serializer: false,
                                    custom_deserializer: false,
                                    transparent: false,
                                },
                            ],
                            skip_serializing: false,
                            skip_deserializing: false,
                            custom_serializer: false,
                            custom_deserializer: false,
                            other: false,
                            untagged: false,
                        },
                        VariantShape {
                            rust_name: "AzBlob",
                            serialize_name: "az-blob",
                            deserialize_name: "az-blob",
                            deserialize_aliases: [
                                "az-blob",
                            ],
                            style: Struct,
                            fields: [
                                FieldShape {
                                    member: Named(
                                        "container_name",
                                    ),
                                    serialize_name: "container-name",
                                    deserialize_name: "container-name",
                                    deserialize_aliases: [
                                        "container-name",
                                    ],
                                    shape: Some(
                                        String,
                                    ),
                                    default: None,
                                    flatten: false,
                                    skip_serializing: false,
                                    skip_serializing_if: None,
                                    skip_deserializing: false,
                                    custom_serializer: false,
                                    custom_deserializer: false,
                                    transparent: false,
                                },
                            ],
                            skip_serializing: false,
                            skip_deserializing: false,
                            custom_serializer: false,
                            custom_deserializer: false,
                            other: false,
                            untagged: false,
                        },
                        VariantShape {
                            rust_name: "Other",
                            serialize_name: "other",
                            deserialize_name: "other",
                            deserialize_aliases: [
                                "other",
                            ],
                            style: Unit,
                            fields: [],
                            skip_serializing: false,
                            skip_deserializing: false,
                            custom_serializer: false,
                            custom_deserializer: false,
                            other: true,
                            untagged: false,
                        },
                    ],
                    attributes: ContainerAttributes {
                        tagging: Internal {
                            tag: "type",
                        },
                        deny_unknown_fields: false,
                        default: None,
                        has_flatten: false,
                        transparent: false,
                        expecting: None,
                        non_exhaustive: true,
                    },
                },
            ),
        },
    ],
}
